update fix white space

--- a/style.css
+++ b/style.css
@@ -4,6 +4,15 @@
   box-sizing: border-box;
 }
 
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
 body {
   background-color: #fff;
   font-family: 'Montserrat', sans-serif;
@@ -111,12 +120,13 @@ footer p {
 }
 
 @media screen and (max-width: 700px) {
+
   .content{
     font-size: 1.4rem;
     margin: 2rem auto 0;
   }
   nav li:not(:left-child){
-    margin-bottom: 1rem  
+    margin-bottom: 1rem;  
   }
 
   nav ul {
